<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <EditText
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/user_name_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />

                <TextView
                    android:id="@+id/drivenKmLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/driven_km_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <SeekBar
                    android:id="@+id/drivenKm"
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:max="3000" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />

                <TextView
                    android:id="@+id/goalKmLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/goal_km_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <SeekBar
                    android:id="@+id/goalKm"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:max="3000" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />

                <TextView
                    android:id="@+id/achievementsUserCreatedLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/achievements_user_created_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ListView
                        android:id="@+id/achievementsUserCreatedList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollbars="horizontal">

                    </ListView>
                </RelativeLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:id="@+id/newAchievement"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/achievementsUserCreated"
                        android:layout_width="177dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/achievements_user_created_name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                    <EditText
                        android:id="@+id/achievementsUserCreatedKm"
                        android:layout_width="106dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="100.0"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                    <TextView
                        android:id="@+id/achievementsUserCreatedKmLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/achievements_user_created_km" />

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/achievementUserCreatedAdd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:tint="@android:color/background_light"
                        app:backgroundTint="@color/colorPrimaryDark"
                        app:srcCompat="@android:drawable/ic_input_add" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />

                <TextView
                    android:id="@+id/coDriverLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/co_driver_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ListView
                        android:id="@+id/coDriverList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollbars="horizontal" />
                </RelativeLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />

                <LinearLayout
                    android:id="@+id/newCoDriver"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/coDriverName"
                        android:layout_width="313dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/co_driver_name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/coDriverAdd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:tint="@android:color/background_light"
                        app:backgroundTint="@color/colorPrimaryDark"
                        app:elevation="0dp"
                        app:srcCompat="@android:drawable/ic_input_add" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />

                <TextView
                    android:id="@+id/carLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/car_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ListView
                        android:id="@+id/carList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollbars="horizontal" />
                </RelativeLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />

                <LinearLayout
                    android:id="@+id/newCar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/carName"
                        android:layout_width="163dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/car_name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                    <EditText
                        android:id="@+id/carKfz"
                        android:layout_width="134dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/car_kfz"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/carAdd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:tint="@android:color/background_light"
                        app:backgroundTint="@color/colorPrimaryDark"
                        app:srcCompat="@android:drawable/ic_input_add" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />

                <Button
                    android:id="@+id/saveSettings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:onClick="save_settings"
                    android:text="@string/save_settings" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />

            </LinearLayout>

        </ScrollView>

    </android.support.constraint.ConstraintLayout>
</LinearLayout>
