...
    <string name="textview_achievements_all">All</string>
    <string name="textview_achievements_recent">Most recent</string>
    <string name="achievements_hidden">Hidden</string>
    <string name="achievements_recent_title">Aww…</string>
    <string name="achievements_recent_description">You have not achieved anything yet</string>
    <string name="stats">Statistics</string>
    <string name="export_empty_filename">Filename cannot be empty!</string>
    <string name="export_no_driving_sessions">There are no driving sessions!</string>

    <string-array name="Weather">
        <item>Dry</item>
        <item>Rain</item>
        <item>Snow</item>
        <item>Ice</item>
...
