...
                    android:layout_weight="0.7"
                    android:text="Filename"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editTextFileName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:ems="10"
                    android:inputType="text"
                    android:textColor="@android:color/black" />
...
                android:layout_margin="15dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/buttonShare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableRight="@drawable/ic_share"
                    android:text="Share" />

...
