package com.thestreetcodecompany.roady;

import android.content.Context;
import android.support.test.InstrumentationRegistry;
import android.support.test.espresso.Espresso;
import android.support.test.rule.ActivityTestRule;
import android.support.test.runner.AndroidJUnit4;
import android.support.test.uiautomator.UiDevice;

import com.thestreetcodecompany.roady.classes.DBHandler;

import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import java.io.File;
import java.util.Calendar;
import java.util.List;

import static android.support.test.espresso.Espresso.onData;
import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.action.ViewActions.clearText;
import static android.support.test.espresso.action.ViewActions.click;
import static android.support.test.espresso.action.ViewActions.closeSoftKeyboard;
import static android.support.test.espresso.action.ViewActions.typeText;
import static android.support.test.espresso.assertion.ViewAssertions.matches;
import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
import static android.support.test.espresso.matcher.ViewMatchers.withId;
import static android.support.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.CoreMatchers.anything;
import static org.junit.Assert.assertEquals;

/**
 * Instrumented test, which will execute on an Android device.
 *
 * @see <a href="http://d.android.com/tools/testing">Testing documentation</a>
 */
@RunWith(AndroidJUnit4.class)
public class ExportInstrumentedTest {

    @Rule
    public ActivityTestRule<ExportActivity> rule = new ActivityTestRule<ExportActivity>(ExportActivity.class);

    @Test
    public void useAppContext() throws Exception {
        // Context of the app under test.
        Context appContext = InstrumentationRegistry.getTargetContext();
        assertEquals("com.thestreetcodecompany.roady", appContext.getPackageName());
    }

    @Test
    public void testEmptyFilename(){
        onView(withId(R.id.buttonShare)).perform(click());
        DBHandler dbh = new DBHandler();
        if(dbh.getAllDrivingSessions(dbh.getUser()).size() == 0) {
            onView(withText(R.string.export_no_driving_sessions)).check(matches(isDisplayed()));
        } else {
            onView(withText(R.string.export_empty_filename)).check(matches(isDisplayed()));
        }
    }

    @Test
    public void testFileEntry(){
        onView(withId(R.id.editTextFileName)).perform(clearText());
        onView(withId(R.id.editTextFileName)).perform(typeText("export_test"), closeSoftKeyboard());

        onView(withId(R.id.buttonShare)).perform(click());

        UiDevice mDevice = UiDevice.getInstance(InstrumentationRegistry.getInstrumentation());
        mDevice.pressBack();
    }

}

